# pydantic-config

./: .gitignore  README.md  pyproject.toml
src/pydantic_config/: __init__.py  validators.py
