[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydantic-another-config"
version = "0.0.2"
authors = [
    { name="Evgeniy Mazalov", email="guyboe@gmail.com" },
]
description = "Extends pydantic settings module"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic==1.10.8",
    "python-benedict[yaml]==0.30.1",
]

[project.urls]
"Homepage" = "https://github.com/guyboe/pydantic-config"
"Bug Tracker" = "https://github.com/guyboe/pydantic-config/issues"
